<resources>
    <string name="app_name">GetEat</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="verification_code">Code</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delivery_search">Delivery Search</string>
    <string name="my_orders">My Orders</string>
    <string name="logo">logo</string>
    <string name="background">background</string>
    <string name="pick_up_address">Pick-up Address</string>
    <string name="order_number">Order Number</string>
    <string name="pick_up_time">Choose Time</string>
    <string name="pick_up_date">Choose Date</string>
    <string name="become_a_courier">Become A Courier</string>
    <string name="geteat_logo">GETEAT Logo</string>
    <string name="search_fragment_background">search fragment background</string>
    <string name="your_address">Your Address</string>
    <string name="nick_name">Nick Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="num_of_orders_so_far">10 orders so far</string>
    <string name="courier_price">price : 30 nis</string>
    <string name="rank">4.3/5</string>
    <string name="report">Report</string>
    <string name="eta">ETA:</string>
    <string name="radius">radius</string>
    <string name="fill_your_courier_profile">Fill Your Courier Profile</string>
    <string name="title_activity_courier">CourierActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="edit_photo">Edit Photo</string>


    <!--external-->
    <string name="action_settings">Settings</string>
    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <!-- font families -->
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="profile_pic">profile pic</string>
    <string name="title_activity_initialized">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_init">FullscreenActivity</string>
    <string name="get_eat">GETEAT</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="new_order">New Order</string>
    <string name="decline">Decline</string>
    <string name="order_approved">Order Approved</string>
    <string name="order_declined">Order Declined</string>
    <string name="rating">4.5/5</string>
    <string name="votersCounter">(0)</string>
    <string name="update_your_name">Update Your Name</string>


    <string name="sign_in_cancelled">Sign In Cancelled</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="courier_avatar">courier avatar</string>
    <string name="courier_logo">courier_logo</string>
</resources>