<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".fragments.Fragment_SearchForm">

    <!--<RelativeLayout
        android:id="@+id/search_GRP_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/matt_gray"
        android:fitsSystemWindows="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".activities.MainScreenActivity">-->

    <ImageView
        android:id="@+id/search_IMG_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:contentDescription="@string/search_fragment_background" />

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:alpha="1"
        android:contentDescription="@string/geteat_logo"
        android:paddingBottom="48dp"
        android:scaleType="fitCenter"
        android:src="@drawable/get_eat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="32dp"
        tools:context=".activities.LoginActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_LAY_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/pick_up_address"
            android:textColorHint="@color/red_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_EDT_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPostalAddress"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_LAY_order"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/order_number"
            android:padding="10dp"
            android:textColorHint="@color/red_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_EDT_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/search_LBL_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="#00716C6C"
            android:drawablePadding="10dp"
            android:ellipsize="end"
            android:text="@string/pick_up_date"
            android:textColor="@color/red_200"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            app:drawableStartCompat="@drawable/ic_date" />


        <TextView
            android:id="@+id/search_EDT_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="#00716C6C"
            android:drawablePadding="10dp"
            android:ellipsize="end"

            android:text="@string/pick_up_time"
            android:textColor="@color/red_200"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            app:drawableStartCompat="@drawable/ic_clock" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_BTN_search"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/red_200"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:cornerRadius="50dp"
            app:strokeColor="@color/black" />
    </LinearLayout>

    <!-- </RelativeLayout>-->

</RelativeLayout>