<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.Fragment_CourierDetails">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_your_courier_profile"
            android:layout_centerInParent="true"
            android:textSize="28sp"
            android:textStyle="bold|normal"
            android:textColor="@color/red_700"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/courierDetails_LAY_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="25dp"
            android:hint="@string/your_address"
            android:textColorHint="@color/red_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/courierDetails_EDT_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPostalAddress"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/courierDetails_LAY_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="25dp"
            android:hint="@string/nick_name"
            android:textColorHint="@color/red_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/courierDetails_EDT_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPersonName"

                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/courierDetails_LAY_radius"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="25dp"
            android:hint="@string/radius"

            android:textColorHint="@color/red_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/courierDetails_EDT_radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="flagNoExtractUi"
                android:inputType="numberDecimal"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/courierDetails_BTN_next"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/red_200"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:cornerRadius="50dp"
            app:strokeColor="@color/black" />
    </RelativeLayout>
</LinearLayout>